build(app): Enable ZGC for Docker image